Adding authentication control in frontend and backend
